--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignorar archivos .env que contienen claves API
-.env
+.env.txt
 
 # Ignorar el archivo de configuración de Streamlit si es necesario
 .streamlit/
